--- a/mainPage.html
+++ b/mainPage.html
@@ -19,11 +19,6 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- Google Fonts-->
-
-
-
-
-
 </head>
 
 <body>
@@ -47,18 +42,18 @@
 
       <ul class="list-unstyled components align-self-center d-flex flex-column">
         <li class="active">
-          <a href="mainPage.html"> <img src="assets/img/shuttle.png" alt=""> <span>Dashboard</span> </a>
+          <a href="mainPage.html"> <i class="fas fa-rocket"></i> <span>Dashboard</span> </a>
         </li>
         <li>
-          <a href="#" class="users"> <img src="assets/img/Path 591.png" alt=""> <span> İstifadəçilər</span></a>
+          <a href="#" class="users-nav"><i class="fas fa-users"></i>  <span> İstifadəçilər</span></a>
           <ul class=" list-unstyled active dropdown  align-items-center d-flex flex-column">
-            <li> <a href="allUsers.html"><span>Bütün</span></a></li>
+            <li > <a href="allUsers.html"><span>Bütün</span></a></li>
             <li><a href="newUser.html"><span>Yarat</span></a></li>
 
           </ul>
         </li>
         <li>
-          <a href="#" class="surveys"> <img src="assets/img/google-forms.png" alt=""> <span> Sorğular</span></a>
+          <a href="#" class="surveys"><i class="fas fa-file-alt"></i> <span> Sorğular</span></a>
           <ul class=" list-unstyled active dropdown align-items-center d-flex flex-column">
             <li> <a href="allQueries.html"><span>Bütün</span></a></li>
             <li><a href="newform.html"><span>Yarat</span></a></li>
@@ -68,12 +63,14 @@
 
         <li>
 
-          <a href="./profile.html"> <img src="assets/img/Group 375.png" alt=""> <span>Parametrlər </span> </a>
+          <a href="./profile.html"><i class="fas fa-cog"></i> <span>Parametrlər </span> </a>
         </li>
 
       </ul>
       <div class="footer text-center">
-        <a href="./mainPage.html"><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
+        <a href="./index.html">
+          <i class="fas fa-sign-out-alt"></i>
+        <span>Profildən çıxış</span></a>
       </div>
 
     </nav>
@@ -95,7 +92,7 @@
                       <div class="card-body">
                         <div class="card-content d-flex justify-content-center align-items-center">
                           <div class="card-icon row justify-content-center d-flex align-items-center">
-                            <img src="assets/img/big-google-forms.png" alt="">
+                            <i class="far fa-file-alt"></i>
                           </div>
                         </div>
                         <div class="card-title text-center my-2">
@@ -108,7 +105,7 @@
                       <div class="card-body">
                         <div class="card-content d-flex justify-content-center align-items-center">
                           <div class="card-icon row justify-content-center d-flex align-items-center">
-                            <img src="assets/img/Group 551.png" alt="">
+                            <i class="fas fa-users"></i>
                           </div>
                         </div>
                         <div class="card-title text-center my-2">
@@ -148,17 +145,17 @@
 
                   <div class="quick-action row justify-content-between ">
                     <span class="quick-action-name ">New Form</span>
-                    <button class="btn btn-sm btn-outline-primary col-4 "><a href="newform.html">Add</a></button>
+                   <a class="btn btn-sm btn-outline-primary col-4"  href="newform.html">Add</a>
                   </div>
 
                   <div class="quick-action   row justify-content-between ">
                     <span class="quick-action-name ">New User</span>
-                    <button class="btn btn-outline-primary btn-sm  col-4 "><a href="newUser.html">Add</a></button>
+                  <a class="btn btn-sm btn-outline-primary col-4"   href="newUser.html">Add</a>
                   </div>
 
                   <div class="quick-action   row justify-content-between ">
                     <span class="quick-action-name ">Change Password</span>
-                    <button class="btn btn-sm btn-outline-primary col-4 "><a href="profile.html">Go</a></button>
+                  <a  class="btn btn-sm btn-outline-primary col-4"   href="profile.html">Go</a>
                   </div>
 
                 </div>
@@ -168,90 +165,90 @@
               </div>
             </div>
           </div>
-          <div class="bottom-card card  card-big col-11 ">
+            <div class="bottom-card card  card-big col-11 ">
 
-            <div class="card-body">
+              <div class="card-body">
 
-              <div class="card-content col-12">
-                <div class="row justify-content-between  align-items-end ">
-                  <div class="card card-small col-md-3 col-12">
-                    <div class="card-body">
-                      <div class="card-content d-flex justify-content-center align-items-center">
+                <div class="card-content col-12">
+                  <div class="row justify-content-between  align-items-end ">
+                    <div class="card card-small col-md-3 col-12">
+                      <div class="card-body">
+                        <div class="card-content d-flex justify-content-center align-items-center">
 
-                        <div class="small-card-text">
-                          <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
-                            voluptatum
-                            perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
-                            cupiditate
-                            doloremque ab architecto.</p>
+                          <div class="small-card-text">
+                            <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
+                              voluptatum
+                              perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
+                              cupiditate
+                              doloremque ab architecto.</p>
 
-                          <div class="row">
-                            <span class="read-number ">
-                              <img src="assets/img/Group 548.png" alt=""> 113</span>
-                          </div>
-                        </div>
-                      </div>
-
-                    </div>
-                  </div>
-
-
-                  <div class="card card-small col-md-3 col-12">
-                    <div class="card-body">
-                      <div class="card-content d-flex justify-content-center align-items-center">
-
-                        <div class="small-card-text">
-                          <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
-                            voluptatum
-                            perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
-                            cupiditate
-                            doloremque ab architecto.</p>
-
-                          <div class="row">
-                            <span class="read-number ">
-                              <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            <div class="row">
+                              <span class="read-number ">
+                                <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            </div>
                           </div>
                         </div>
 
                       </div>
-
                     </div>
-                  </div>
 
 
-                  <div class="card card-small col-md-3 col-12">
-                    <div class="card-body">
-                      <div class="card-content d-flex justify-content-center align-items-center">
+                    <div class="card card-small col-md-3 col-12">
+                      <div class="card-body">
+                        <div class="card-content d-flex justify-content-center align-items-center">
 
-                        <div class="small-card-text">
-                          <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
-                            voluptatum
-                            perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
-                            cupiditate
-                            doloremque ab architecto.</p>
+                          <div class="small-card-text">
+                            <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
+                              voluptatum
+                              perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
+                              cupiditate
+                              doloremque ab architecto.</p>
 
-                          <div class="row">
-                            <span class="read-number ">
-                              <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            <div class="row">
+                              <span class="read-number ">
+                                <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            </div>
                           </div>
+
                         </div>
 
                       </div>
-
                     </div>
+
+
+                    <div class="card card-small col-md-3 col-12">
+                      <div class="card-body">
+                        <div class="card-content d-flex justify-content-center align-items-center">
+
+                          <div class="small-card-text">
+                            <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
+                              voluptatum
+                              perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
+                              cupiditate
+                              doloremque ab architecto.</p>
+
+                            <div class="row">
+                              <span class="read-number ">
+                                <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            </div>
+                          </div>
+
+                        </div>
+
+                      </div>
+                    </div>
+
+
+
+                  <a class="btn col-md-2 col-12 btn-outline-primary " href="results.html">See All</a>
+
                   </div>
-
-
-
-                  <button class="btn col-md-2 col-12 btn-outline-primary "><a href="results.html">See All</a></button>
-
                 </div>
               </div>
             </div>
-          </div>
 
         </div>
       </section>
