--- a/newUser.html
+++ b/newUser.html
@@ -47,47 +47,46 @@
       </div>
 
       <ul class="list-unstyled components align-self-center d-flex flex-column">
-        <li class="">
-          <a href="mainPage.html"> <img src="assets/img/shuttle.png" alt=""> <span>Dashboard</span> </a>
+        <li >
+          <a href="mainPage.html"> <i class="fas fa-rocket"></i> <span>Dashboard</span> </a>
         </li>
         <li>
-          <a href="#" class="users"> <img src="assets/img/Path 591.png" alt=""> <span> İstifadəçilər</span></a>
-          <ul class="dropdown  align-items-center d-flex flex-column list-unstyled">
-            <li> <a href="allUsers.html"><span>Bütün</span></a></li>
+          <a href="#" class="users-nav"><i class="fas fa-users"></i>  <span> İstifadəçilər</span></a>
+          <ul class=" list-unstyled active   align-items-center d-flex flex-column">
+            <li > <a href="allUsers.html"><span>Bütün</span></a></li>
             <li class="active"><a href="newUser.html"><span>Yarat</span></a></li>
 
           </ul>
         </li>
         <li>
-          <a href="#" class="surveys"> <img src="assets/img/google-forms.png" alt=""> <span> Sorğular</span></a>
-          <ul class=" list-unstyled active dropdown  align-items-center d-flex flex-column">
+          <a href="#" class="surveys"><i class="fas fa-file-alt"></i> <span> Sorğular</span></a>
+          <ul class=" list-unstyled active dropdown align-items-center d-flex flex-column">
             <li> <a href="allQueries.html"><span>Bütün</span></a></li>
             <li><a href="newform.html"><span>Yarat</span></a></li>
 
           </ul>
         </li>
+
         <li>
 
-          <a href="profile.html"> <img src="assets/img/Group 375.png" alt=""> <span>Parametrlər </span> </a>
+          <a href="./profile.html"><i class="fas fa-cog"></i> <span>Parametrlər </span> </a>
         </li>
 
       </ul>
       <div class="footer text-center">
-        <a href=""><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
+        <a href="./index.html">
+          <i class="fas fa-sign-out-alt"></i>
+        <span>Profildən çıxış</span></a>
       </div>
 
     </nav>
-
     <!-- Page Content -->
     <div id="content" class="">
-
-
-
 
       <section class="new-user min-vh-100 d-flex align-items-center">
         <div class="container">
           <div class="row">
-            <div class="card col-xl-10 col-lg-10 col-md-10 col-sm-12 col-10  mx-auto  p-10">
+            <div class="card col-xl-11 col-lg-11 col-md-11 col-sm-12 col-11  mx-auto  p-10">
               <div class="card-body">
                 <div class="card-title text-center my-2">
                   <h4>Yeni İstifadəçi</h4>
