--- a/allQueries.html
+++ b/allQueries.html
@@ -24,8 +24,8 @@
 
   <div class="wrapper d-flex align-items-stretch">
 
-    <!-- Sidebar -->
-    <nav id="sidebar" class="d-flex justify-content-around flex-column ">
+     <!-- Sidebar -->
+     <nav id="sidebar" class="d-flex justify-content-around flex-column ">
 
       <button type="button" id="sidebarCollapse" class="btn btn-outline-primary btn-lg text-right">
         <i class="fa fa-bars"></i>
@@ -41,19 +41,19 @@
       </div>
 
       <ul class="list-unstyled components align-self-center d-flex flex-column">
-        <li class="">
-          <a href="mainPage.html"> <img src="assets/img/shuttle.png" alt=""> <span>Dashboard</span> </a>
+        <li >
+          <a href="mainPage.html"> <i class="fas fa-rocket"></i> <span>Dashboard</span> </a>
         </li>
         <li>
-          <a href="#" class="users"> <img src="assets/img/Path 591.png" alt=""> <span> İstifadəçilər</span></a>
-          <ul class=" list-unstyled active dropdown align-items-center d-flex flex-column">
-            <li> <a href="allUsers.html"><span>Bütün</span></a></li>
+          <a href="#" class="users-nav"><i class="fas fa-users"></i>  <span> İstifadəçilər</span></a>
+          <ul class=" list-unstyled active dropdown  align-items-center d-flex flex-column">
+            <li > <a href="allUsers.html"><span>Bütün</span></a></li>
             <li><a href="newUser.html"><span>Yarat</span></a></li>
 
           </ul>
         </li>
         <li>
-          <a href="#" class="surveys"> <img src="assets/img/google-forms.png" alt=""> <span> Sorğular</span></a>
+          <a href="#" class="surveys"><i class="fas fa-file-alt"></i> <span> Sorğular</span></a>
           <ul class=" list-unstyled active  align-items-center d-flex flex-column">
             <li class="active"> <a href="allQueries.html"><span>Bütün</span></a></li>
             <li><a href="newform.html"><span>Yarat</span></a></li>
@@ -63,12 +63,14 @@
 
         <li>
 
-          <a href="./profile.html"> <img src="assets/img/Group 375.png" alt=""> <span>Parametrlər </span> </a>
+          <a href="./profile.html"><i class="fas fa-cog"></i> <span>Parametrlər </span> </a>
         </li>
 
       </ul>
       <div class="footer text-center">
-        <a href="./mainPage.html"><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
+        <a href="./index.html">
+          <i class="fas fa-sign-out-alt"></i>
+        <span>Profildən çıxış</span></a>
       </div>
 
     </nav>
@@ -78,14 +80,15 @@
       <section class="users min-vh-100 d-flex align-items-center justify-content-center">
 
         <div class="container">
-          <div class="row">
+          <div class="">
             <table
-              class="table table-striped table-responsive-sm  table-light col-xl-11 col-lg-10 col-md-10 col-sm-8 col-10 mx-auto ">
+            class="table table-striped table-responsive-xl  table-light col-xl-12 col-lg-12 col-md-10 col-sm-10 col-10 mx-auto ">
               <caption class="table-active col-12">
 
                 <span>Bütün Sorğular </span>
 
-                <button class="add-button btn btn-md btn-outline-primary"><a href="newform.html">Əlavə et</a></button>
+            
+           <a class="  add-button btn btn-md  btn-outline-primary " href="./newform.html">Əlavə et</a>
 
               </caption>
 
