--- a/allUsers.html
+++ b/allUsers.html
@@ -41,19 +41,19 @@
       </div>
 
       <ul class="list-unstyled components align-self-center d-flex flex-column">
-        <li class="">
-          <a href="mainPage.html"> <img src="assets/img/shuttle.png" alt=""> <span>Dashboard</span> </a>
+        <li >
+          <a href="mainPage.html"> <i class="fas fa-rocket"></i> <span>Dashboard</span> </a>
         </li>
         <li>
-          <a href="#" class="users"> <img src="assets/img/Path 591.png" alt=""> <span> İstifadəçilər</span></a>
-          <ul class=" list-unstyled active  align-items-center d-flex flex-column">
-            <li class="active"> <a href="allUsers.html"><span>Bütün</span></a></li>
+          <a href="#" class="users-nav"><i class="fas fa-users"></i>  <span> İstifadəçilər</span></a>
+          <ul class=" list-unstyled active   align-items-center d-flex flex-column">
+            <li class="active" > <a href="allUsers.html"><span>Bütün</span></a></li>
             <li><a href="newUser.html"><span>Yarat</span></a></li>
 
           </ul>
         </li>
         <li>
-          <a href="#" class="surveys"> <img src="assets/img/google-forms.png" alt=""> <span> Sorğular</span></a>
+          <a href="#" class="surveys"><i class="fas fa-file-alt"></i> <span> Sorğular</span></a>
           <ul class=" list-unstyled active dropdown align-items-center d-flex flex-column">
             <li> <a href="allQueries.html"><span>Bütün</span></a></li>
             <li><a href="newform.html"><span>Yarat</span></a></li>
@@ -63,28 +63,32 @@
 
         <li>
 
-          <a href="./profile.html"> <img src="assets/img/Group 375.png" alt=""> <span>Parametrlər </span> </a>
+          <a href="./profile.html"><i class="fas fa-cog"></i> <span>Parametrlər </span> </a>
         </li>
 
       </ul>
       <div class="footer text-center">
-        <a href="./mainPage.html"><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
+        <a href="./index.html">
+          <i class="fas fa-sign-out-alt"></i>
+        <span>Profildən çıxış</span></a>
       </div>
 
     </nav>
+
     <div id="content" class="">
 
 
-      <section class="users-section min-vh-100 d-flex align-items-center justify-content-center">
+      <section class="users min-vh-100 row align-items-center justify-content-center">
         <div class="container">
-          <div class="row">
-            <table class="table table-striped table-light col-xl-11 col-lg-10 col-md-10 col-sm-8 col-8 mx-auto ">
+    
+          <table
+          class="table table-striped table-responsive-xl  table-light col-xl-12 col-lg-12 col-md-10 col-sm-10 col-10 mx-auto ">
 
-              <caption class="table-active">
+              <caption class="table-active col-12 ">
 
-                <span>Bütün İstifadəçilər </span>
+                <span class="">Bütün İstifadəçilər </span>
 
-                <button class="add-button btn btn-md btn-outline-primary"><a href="newUser.html">Əlavə et</a></button>
+           <a class="  add-button btn btn-md  btn-outline-primary " href="newUser.html">Əlavə et</a>
 
               </caption>
 
@@ -341,7 +345,7 @@
               </div>
             </div>
           </div>
-        </div>
+  
       </section>
     </div>
   </div>
