Fidex - other question type spam

--- a/newform.html
+++ b/newform.html
@@ -127,7 +127,7 @@
                   </div>
                   <div id="addOther"></div>
                   <div class="other text-right pb-5 px-3" id="func-buttons">
-                    <button type="button" class="btn btn-link" id="other">Digər...</button>
+                    <button type="button" class="btn btn-link" id="other" onclick="addOther()">Digər...</button>
                     <button type="button" class="btn btn-outline-primary" onclick="addQuestion()">Sual əlavə et</button>
                     <button type="button" class="btn btn-outline-primary" onclick="addSelect()">Variant əlavə
                       et</button>
