--- a/edit.html
+++ b/edit.html
@@ -29,60 +29,62 @@
 
 <body>
   <div class="newform wrapper d-flex align-items-stretch">
-   <!-- Sidebar -->
-   <nav id="sidebar" class="d-flex justify-content-around flex-column ">
+    <!-- Sidebar -->
+    <nav id="sidebar">
 
-    <button type="button" id="sidebarCollapse" class="btn btn-outline-primary btn-lg text-right">
-      <i class="fa fa-bars"></i>
-      <span class="sr-only">Toggle Menu</span>
-    </button>
-
-
-    <div class="username d-flex align-items-center flex-column justify-content-center">
-      <h2 class="text-center">
-        Mammadova Leyla
-      </h2>
-      <p class="badge badge-secondary">Admin</p>
-    </div>
-
-    <ul class="list-unstyled components align-self-center d-flex flex-column">
-      <li >
-        <a href="mainPage.html"> <i class="fas fa-rocket"></i> <span>Dashboard</span> </a>
-      </li>
-      <li>
-        <a href="#" class="users-nav"><i class="fas fa-users"></i>  <span> İstifadəçilər</span></a>
-        <ul class=" list-unstyled active dropdown  align-items-center d-flex flex-column">
-          <li > <a href="allUsers.html"><i class="fas fa-users-cog"></i> <span>Bütün</span></a></li>
-          <li><a href="newUser.html"><i class="fas fa-user-plus"></i> <span>Yarat</span></a></li>
-
-        </ul>
-      </li>
-      <li>
-        <a href="#" class="surveys"><i class="fas fa-file"></i> <span> Sorğular</span></a>
-        <ul class=" list-unstyled active   align-items-center d-flex flex-column">
-          <li class="active"> <a href="allQueries.html"><i class="fas fa-file-alt"></i>  <span>Bütün</span></a></li>
-          <li ><a href="newform.html"> <i class="far fa-file"></i> <span>Yarat</span></a></li>
-
-        </ul>
-      </li>
-
-      <li>
-
-        <a href="./profile.html"><i class="fas fa-cog"></i> <span>Parametrlər </span> </a>
-      </li>
-
-    </ul>
-    <div class="footer text-center">
-      <a href="./index.html">
-        <i class="fas fa-sign-out-alt"></i>
-      <span>Profildən çıxış</span></a>
-    </div>
-
-  </nav>
+      <button type="button" id="sidebarCollapse" class="btn btn-outline-primary btn-lg text-right">
+        <i class="fa fa-bars"></i>
+        <span class="sr-only">Toggle Menu</span>
+      </button>
 
 
+      <div class="username d-flex align-items-center flex-column justify-content-center">
+        <h2 class="text-center" id="sideH2">
+          Mammadova Leyla
+        </h2>
+        <p class="badge badge-secondary">Admin</p>
+      </div>
+
+      <ul class="list-unstyled components align-self-center d-flex flex-column">
+        <li class="">
+          <a href="mainPage.html"><i class="fas fa-rocket"></i> <span id="sideSpan">Dashboard</span> </a>
+        </li>
+        <li>
+          <a href="#" class="users-nav"><i class="fas fa-users"></i> <span id="sideSpan">
+              İstifadəçilər</span></a>
+          <ul class=" list-unstyled active dropdown align-items-center d-flex flex-column">
+            <li> <a href="allUsers.html"><i class="fas fa-users-cog"></i> <span id="sideSpan">Bütün</span></a></li>
+            <li><a href="newUser.html"><i class="fas fa-user-plus"></i> <span id="sideSpan">Yarat</span></a></li>
+
+          </ul>
+        </li>
+        <li>
+          <a href="#" class="surveys"><i class="fas fa-file-alt"></i> <span id="sideSpan">
+              Sorğular</span></a>
+          <ul class=" list-unstyled active  align-items-center d-flex flex-column">
+            <li class="active"> <a href="allQueries.html"><i class="fas fa-file-alt"></i> <span
+                  id="sideSpan">Bütün</span></a></li>
+            <li><a href="newform.html"><i class="fas fa-file"></i> <span id="sideSpan">Yarat</span></a></li>
+
+          </ul>
+        </li>
+
+        <li>
+
+          <a href="./profile.html"><i class="fas fa-cog"></i> <span id="sideSpan">Parametrlər </span>
+          </a>
+        </li>
+
+      </ul>
+      <div class="footer text-center">
+        <a href="./mainPage.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
+            çıxış</span></a>
+      </div>
+
+    </nav>
     <div id="content">
-      <section class="users-section min-vh-100 d-flex align-items-center justify-content-center">
+      <div class="mobileMenuIcon"><i class="fa fa-bars"></i></div>
+      <section class="users-section min-vh-100 d-flex align-items-center justify-content-center py-4">
         <div class="container form_container mt-5">
           <div class="row">
             <div class="col-12">
@@ -139,23 +141,23 @@
                   </select>
                   <div class="radiosection tabcontent radio box" id="Radio">
                     <label><input type="radio" name="rad" id="" /><input class="text" type="text"
-                        value="Birinci cavab"></label><br />
+                        placeholder="Birinci cavab"></label><br />
                     <label><input type="radio" name="rad" id="" /><input class="text" type="text"
-                        value="Birinci cavab"></label><br />
+                        placeholder="Birinci cavab"></label><br />
                     <label><input type="radio" name="rad" id="" /><input class="text" type="text"
-                        value="Birinci cavab"></label><br />
+                        placeholder="Birinci cavab"></label><br />
                     <label><input type="radio" name="rad" id="" /><input class="text" type="text"
-                        value="Birinci cavab"></label><br />
+                        placeholder="Birinci cavab"></label><br />
                   </div>
                   <div class="checksection tabcontent check box" id="Check">
                     <label><input type="checkbox" id="" /><input class="text" type="text"
-                        value="Birinci cavab"></label><br />
+                        placeholder="Birinci cavab"></label><br />
                     <label><input type="checkbox" id="" /><input class="text" type="text"
-                        value="Birinci cavab"></label><br />
+                        placeholder="Birinci cavab"></label><br />
                     <label><input type="checkbox" id="" /><input class="text" type="text"
-                        value="Birinci cavab"></label><br />
+                        placeholder="Birinci cavab"></label><br />
                     <label><input type="checkbox" id="" /><input class="text" type="text"
-                        value="Birinci cavab"></label><br />
+                        placeholder="Birinci cavab"></label><br />
                   </div>
                   <div class="opensection tabcontent open box" id="Open">
                     <label>
@@ -175,7 +177,7 @@
             </div>
           </div>
           <div class="container close text-right py-4">
-            <button type="button" class="btn btn-outline-success mr-3" onclick="addInfo()">Yadda saxla</button>
+            <button type="button" class="btn btn-outline-success mr-3" onclick="submitForms()">Yadda saxla</button>
             <button type="button" class="btn btn-outline-danger remove-button">Ləğv et</button>
           </div>
         </div>
